Prevent selection highlights on mobile for key buttons

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,3 +22,11 @@
 .inline-text{
   display: inline-flex;
 }
+
+.no-select{
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
